Refactor code generator to enable support for different target formats